[package]
name = "Roadgraph"
version = "0.1.0"
authors = ["Andreas Haug <a-haug@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
backtrace = "0.3"
petgraph = "0.5.1"
rand = "0.8.3"